Refactor layout; updated iCard UI responsiveness

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                     <div class="card-face card-front">
                         <div class="light" id="light"></div>
 
-                        <div class="photo-frame">
-                            <!-- Replace with your real hosted photo when ready -->
-                            <img src="https://via.placeholder.com/150" alt="Rohit Kumar Sahoo">
+                        <div class="video-frame">
+                            <video autoplay muted loop playsinline>
+                                <source src="./assets/video/character.mp4" type="video/mp4">
+                            </video>
                         </div>
 
                         <div class="card-name">ROHIT KUMAR SAHOO</div>
@@ -91,15 +92,9 @@
                 <div id="history">
                     <div class="output-line system-output">
 <span class="p-user">rohit</span><span class="p-host">@portfolio</span><span class="p-symbol">:~$</span> <span class="user-text">help</span>
-Available commands:
-about       - Learn about me
-projects    - View my projects
-skills      - My technical skills
-experience  - My experience
-contact     - Contact details
-clear       - Clear the terminal
+Hi, I'm Rohit Kumar Sahoo — a CSE student constantly exploring and learning whatever sparks my curiosity.
 
-Type any command to continue...
+Type 'help' to see available commands.
                     </div>
                 </div>
 
