Refactor layout; updated iCard UI responsiveness

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <header>
         <div class="brand">
             <h1>Rohit Kumar Sahoo</h1>
-            <div class="role">Student in CSE</div>
+            <div class="role">Portfolio</div>
         </div>
-        <a href="#" class="featured-link">Featured on Flux Academy ↗</a>
+        <a href="#" class="featured-link">Craft. Debug. Master.</a>
     </header>
 
     <div class="separator"></div>
@@ -59,7 +59,7 @@
                         </div>
 
                         <div class="card-name">ROHIT KUMAR SAHOO</div>
-                        <div class="card-role">STUDENT IN CSE</div>
+                        <div class="card-role">CSE • Developer</div>
                     </div>
 
                     <!-- BACK -->
