Changes in the booting screen

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             <pre class="boot-text" id="boot-text"></pre>
 
             <!-- Loading bar stays -->
-            <div class="boot-progress">
-                <div class="boot-progress-bar" id="boot-progress-bar"></div>
+            <div class="boot-progress neon-loader">
+                <div class="neon-progress" id="boot-progress-bar"></div>
             </div>
+
 
             <div class="boot-hint">
                 Press <span class="boot-key">DEL</span> to enter setup &nbsp;|&nbsp;
