Changes for mobile UX

--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
 
                 </div>
             </div>
+            <div class="scroll-hint-mobile">
+                <span>Scroll for terminal</span>
+                <span class="scroll-arrow">▾</span>
+            </div>
         </div>
 
         <!-- DRAG BAR -->
